# Otus_lectures

./: .gitignore  16_9_OTUS_Template.pptx  Demo_15_sklearn_pipeline.ipynb  Demo_15_sklearn_pipelines.pptx  README.md  VirtualEnv.md  regular_exp.ipynb  Путь в ИТ и преподавании_ история руководителя курса «Reinforcement Learning» и преподавателя ОТУС Игоря Стурейко-2.docx
Analytics/08 - Библиотека Numpy/: 08 - NumPy vectors and matrix.ipynb  08 - Библиотека Numpy.pptx
Analytics/09 - Библиотека Pandas/: 09 - Библиотека Pandas.pptx  Библиотека Pandas.ipynb
BtB/: Al и Machine learning.docx
FinML/: weight_decay.py  Тема_3._Продвинутое_использование_библиотеки_FinRL-97041-20fefe.ipynb  защита_таблицы_с_помощью_хеша.sql
ML Adv/: 25 - MCMC lection.ipynb  Theme_01_Lesson_01 Production code.ipynb
MLOps/: requirements.txt
MedML/: exploring-eeg-a-beginner-s-guide.ipynb
Python/: OOP_indetails-296721-6abcab.ipynb
RL/: Reinforcement Learning - Google Drive.webloc
RL/01 - Introduction in Reinforcement Learning/01 - 05 Base algorithms Q-learning, SARSA, Monte Carlo/code/Maze/: maze_Q_learning.py  maze_cross_entropy.py  pyproject.toml  requirements.txt
RL/01 - Introduction in Reinforcement Learning/01 - 05 Training with simple game scenarios/CartPole/: SARSA_cartpole.py  main.py  pyproject.toml  qlearning_cartpole.py
RL/01 - Introduction in Reinforcement Learning/01 - 05 Training with simple game scenarios/Custom_env/: ActionSpace.py  Colony.py  Cure.py  ObservationSpace.py  main.py  pyproject.toml  sarsa.py
RL/2024-03/: Zachita
Writerside/: o.tree  writerside.cfg
(+528 files in other folders)
