[tool.poetry]
name = "custom-env"
version = "0.1.0"
description = ""
authors = ["Stureiko Igor <stureiko@mail.ru>"]
readme = "README.md"
packages = [{include = "custom_env"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0.74"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
celluloid = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

