[tool.poetry]
name = "maze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "0.25.2"
matplotlib = "^3.8.2"
mpld3 = "^0.5.9"
gym-maze = "0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
